Fixed recipes to work with 1.21 Some blockstate and lighting stuff is still borked Game now runs!